--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,13 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.5.1",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
+    "password-validator": "^5.2.1",
     "sequelize": "^6.12.0-beta.3"
   }
 }
