--- a/backend/package.json
+++ b/backend/package.json
@@ -21,5 +21,13 @@
     "nodemailer": "^6.7.2",
     "password-validator": "^5.2.1",
     "sequelize": "^6.12.0-beta.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-vue": "^8.2.0"
   }
 }
